# deadmansnitch

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  coverage.xml  example_alertmanager.json  gunicorn_config.py  pyproject.toml  requirements.txt
.github/: renovate.json5
.github/workflows/: ci.yml  docker-image.yml  megalinter.yml  test.yml
app/: __init__.py  config.py  logging_setup.py  main.py  watchdog_service.py  watchdog_state.json
app/domain/: watchdog_state.py
app/notifications/: message_factory.py  notifier.py
app/notifications/providers/: base_provider.py  google_chat.py
app/persistence/: file_repository.py  repository.py
app/services/: kubernetes_probes.py  watchdog_monitor.py  watchdog_service.py
app/web/: routes.py
docker/: entrypoint.sh
test/: test_app.py
tests/: conftest.py  test_app_init.py  test_config.py  test_coverage_edge_cases.py  test_file_repository.py  test_gunicorn_config.py  test_kubernetes_probes.py  test_logging_setup.py  test_notifications.py  test_routes.py  test_watchdog_monitor.py  test_watchdog_service.py  test_watchdog_state.py
