[project]
name = "deadmansnitch"
version = "0.1.0"
description = "Deadmansnitch is a monitoring tool designed to ensure that your scheduled tasks are running correctly."
authors = [
    {name = "Your Name", email = "you@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.1.1",
    "Jinja2>=3.1.6",
    "gunicorn>=22.0.0",
    "requests>=2.32.4",
    "python-dateutil>=2.9.0.post0",
    "setproctitle>=1.3.5",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.15.1"
mypy = "^1.14.1"
pre-commit = "^4.1.0"
types-requests = "^2.32.0.20241016"
types-python-dateutil = "^2.9.0.20241206"
types-setuptools = "^81.0.0.20260209"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = "."

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
